# aerc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
CMake/: FindTermbox.cmake
config/: accounts.conf  aerc.conf
include/: absocket.h  bind.h  colors.h  commands.h  config.h  handlers.h  log.h  render.h  state.h  tests.h  ui.h  urlparse.h  worker.h
include/email/: headers.h
include/imap/: date.h  imap.h  worker.h
include/internal/: imap.h
include/ui/: render.h
include/util/: aqueue.h  base64.h  hashtable.h  list.h  stringop.h
src/: absocket.c  bind.c  colors.c  commands.c  config.c  handlers.c  log.c  main.c  render.c  state.c  ui.c  urlparse.c  worker.c
src/email/: headers.c
src/imap/: capability.c  date.c  delete.c  fetch.c  flags.c  imap.c  list.c  ok.c  parse.c  select.c  status.c  util.c  worker.c
src/imap/worker/: connect.c  delete.c  fetch.c  list.c  select.c  worker.c
src/ui/: render.c
src/util/: aqueue.c  base64.c  hashtable.c  ini.c  list.c  stringop.c
test/: CMakeLists.txt  bind.c  main.c  urlparse.c  wrappers.c
test/email/: headers.c
test/imap/: imap.c
